<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/explore"
        android:title="@string/title_explore" />
    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/messages"
        android:title="@string/title_messages" />
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/fav"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/title_profile" />

</menu>
