<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

   >
    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo" />
        <TextView
            android:id="@+id/loginwith"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_with"
            android:layout_below="@+id/logo"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"
            />

<LinearLayout
    android:id="@+id/socialmedia"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_below="@+id/loginwith"
    android:layout_marginTop="30dp"
    android:gravity="center_horizontal"
    >

   <LinearLayout
       android:id="@+id/facebooklogin"
       android:layout_width="100dp"
       android:layout_height="100dp"
       android:background="@drawable/my_rounded_bg"
       android:layout_gravity="center"
       android:gravity="center_horizontal"
       >

       <ImageView
           android:layout_width="48dp"
           android:layout_height="match_parent"
           android:src="@drawable/fb" />
   </LinearLayout>

    <LinearLayout
        android:id="@+id/instagramlogin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/my_rounded_bg"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/insta" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/twitterlogin"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/my_rounded_bg"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/twitter_new" />
    </LinearLayout>

</LinearLayout>
        <LinearLayout
            android:id="@+id/continuewithemail"
            android:layout_width="340dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_below="@+id/socialmedia"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:background="@drawable/my_rounded_bg"
            android:layout_centerHorizontal="true"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mail"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_with_email"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="25sp"
                />
        </LinearLayout>
    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >
        <LinearLayout
            android:id="@+id/unLayout"
            android:layout_width="340dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:background="@drawable/my_rounded_bg"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mail"
                />
        <EditText
            android:id="@+id/username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
            android:hint="Email"
            />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/passLayout"
            android:layout_width="340dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:background="@drawable/my_rounded_bg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/unLayout"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/lock"
                />
            <EditText

                android:id="@+id/password"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_marginLeft="10dp"
                android:inputType="textPassword"
                android:hint="Password"

                />
        </LinearLayout>
        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="5dp"
            android:layout_below="@+id/passLayout"
            android:text="Forgot Password"
            android:textSize="25sp"
            android:textColor="#e92727"
            android:textStyle="bold" />
        <LinearLayout
            android:id="@+id/continuewithsocial"
            android:layout_width="340dp"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_below="@id/forgot_password"
            android:gravity="center_horizontal"
            android:background="@drawable/my_rounded_bg"
            android:layout_centerHorizontal="true"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/fb"
                />  <ImageView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/insta"
            android:layout_marginLeft="30dp"
            />
            <ImageView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:src="@drawable/twitter_new"
                android:layout_marginLeft="30dp"
                />

        </LinearLayout>
        <Button
            android:id="@+id/signin"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/bg"
            android:layout_alignParentBottom="true"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"

            />
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />
</RelativeLayout>